# message-whatsapp

./: .gitignore  log_erros.txt  message-watsapp.py  message-watsapp.spec  playwright_whatsapp.py  pyproject.toml  relatorio.csv
